--- a/style.css
+++ b/style.css
@@ -9,55 +9,53 @@
 
 /* ===== Reset / Defaults ===== */
 *, *::before, *::after{
+    margin: 0;
+    padding: 0;
     font-family: 'Montserrat', sans-serif;
     box-sizing: border-box;
 }
 
-/* ===== Body ===== */
+/* ===== Body/Parent ===== */
 body{
-    margin: 0;
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    height: 100vh;
+    flex-flow: column wrap;
+    height: 100vh auto;
     color: #fff;
     background: var(--matteBlackDark);
-    min-width: 400px;
-}
-
-.search-button{
-    display: flex;
-    align-self: center;
-    justify-content: center;
-    flex-flow: row wrap;
-}
-
-.search-button a{
-    display: flex;
-    flex-flow: row wrap;
-    margin-top: .5rem;
-}
-.search-button > a img{
-    width: 35px;
+    /* overflow: hidden; */
 }
 
 /* ===== Search Button Menu ===== */
+[data-searchIcon]{
+    width: 35px;
+    margin-left: .5rem;
+}
+
+.search-button-wrapper{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+    margin-top: .5rem;
+}
+
+.search-button > a:first-child{
+    display: flex;
+}
 
 [data-searchField]{
-    display: flex;
-    align-self: center;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     max-width: 0px;
     opacity: 0;
     border-radius: 1rem;
     color: #fff;
+    font-weight: bold;
     background: var(--matteBlack);
     transition: max-width .25s ease-in-out, opacity .25s ease-in-out;
 }
 
 [data-countrySelection]{
-    display: flex;
-    align-self: center;
     max-width: 0px;
     opacity: 0;
     margin-left: 1rem;
@@ -66,10 +64,11 @@ body{
     color: #fff;
     background: var(--matteBlack);
     transition: max-width .25s ease-in-out, opacity .25s ease-in-out;
+    margin-right: 1rem;
 }
 
 [data-searchField].active{
-    max-width: 500px;
+    max-width: 400px;
     opacity: 1;
 }
 
@@ -78,7 +77,43 @@ body{
     opacity: 1;
 }
 
-/* ===== Header wwrapper ===== */
+[data-menuBtn]{
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    transition: .25s ease-in-out;
+}
+
+.menu-wrapper{
+    display: flex;
+    margin-left: auto;
+}
+
+.menu-items{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity .25s ease-in-out,
+    transform .25s ease-in-out;
+}
+
+.menu-items.active{
+    opacity: 1;
+    transform: translateX(25px);
+}
+
+[data-menuBtn].active{
+    transform: translate(-240px);
+}
+
+[data-getDeviceLocationBtn]{
+    cursor: pointer;
+    width: 40px;
+    pointer-events: auto;
+}
+
+/* ===== Header Wrapper ===== */
 .header-wrapper{
     display: flex;
     flex-flow: row wrap;
@@ -86,7 +121,6 @@ body{
     align-items: center;
     font-size: 1.5rem;
     height: auto;
-    margin: .5rem;
 }
 
 .current-weather-icon{
@@ -100,9 +134,13 @@ body{
     font-size: clamp(2rem, 7vmin, 4rem);
 }
 
-/* .forecast-wrapper{
-    height: 20%;
-} */
+/* ===== Details Wrapper ===== */
+main{  
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin-top: .5rem;
+}
 
 .details-wrapper{
     display: flex;
@@ -110,10 +148,38 @@ body{
     justify-content: center;
     align-items: center;
     font-size: 1.5rem;
-    height: 40%;
-    width: 50%;
-    margin: .5rem;
+    width: 20vw;
     background: var(--matteBlack);
+    border-right: .5rem solid var(--matteBlackDark);
+}
+ 
+.forecast-wrapper{
+    display: flex;
+    flex-flow: row wrap;
+    width: 80vw;
+    background-color: var(--matteBlack);
 }
 
+.forecast-details{
+    display: flex;
+}
 
+.forecast-weather-icon{
+    min-width: 100px;
+    max-width: 150px;
+}
+
+@media all and (max-width: 1500px) {
+    .details-wrapper{
+        width: 100%;
+        margin-bottom: .5rem;
+        border: none;
+    }
+
+    .forecast-wrapper{
+        display: flex;
+        justify-content: center;
+        gap: 1rem;
+        width: 100%;
+    }
+}
